# gensou-client

./: .gitignore  README.md  flake.nix  key_extraction_writeup.md
nix/cross/: add-prefix.patch  win-overlay.nix  win32.nix
nix/pkgs/: detours.nix  effil-win32.nix  lua-cbor.nix  lua-websockets.nix  luajit-win32.nix  luasocket-win32.nix  mediator.nix  zig-cross.nix
nix/pkgs/effil-win32/: default.nix  fix-new-gcc.patch  sol2-patched.nix
nix/pkgs/luasec-win32/: default.nix  fix-win32.patch
patches/: 0001-http-client-fix.patch  0002-change-server-address.patch  0003-unlock-game-features.patch  0004-rewrite-the-networking.patch  0005-support-smaller-player-updates.patch  0006-support-quick-join.patch
src/: gensou.lua  gensou_config.lua
src/gensou/: scene.lua  util.lua  websocket.lua
src/gensou/websocket/: client.lua  frame.lua  poller.lua
tools/: CMakeLists.txt  blowfish.h  kotldr.cpp  run_n_gun_32.c  thmj4n.h  trim_null.py
tools/toolchain/: x86-windows-gnu.cmake
